# etfalgo

./: .gitignore  main.py  pyproject.toml
experiment/: function.py
test/: test.py
test_ci_cd/: test_ci_cd.json  test_ci_cd.py
