[tool.poetry]
name = "etfalgo"
version = "0.1.0"
description = "A algorithmic trading project for 3X sensitive ETF"
authors = ["ycfeng1107@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
