[tool.poetry]
name = "etfalgo"
version = "0.1.0"
description = "A algorithmic trading project for 3X sensitive ETF"
authors = ["ycfeng1107@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pandas-ta = "^0.3.14-beta.0"
questrade-api = "^1.0.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
